tests/syntax/good/testfile-semicolon-7.go
package main

func main() {
	x := 1 +   // pas de point-virgule automatique
          2
        x++
}
