tests/syntax/bad/testfile-semicolon-2.go
package main

func main() {
  bar(foo(1, 2)  // point-virgule automatique
      )
}
